--- a/trunk/configs/templates/PSG1218_nano.config
+++ b/trunk/configs/templates/PSG1218_nano.config
@@ -224,17 +224,17 @@ CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
 
-CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
+CONFIG_FIRMWARE_INCLUDE_VLMCSD=n
 
 CONFIG_FIRMWARE_INCLUDE_TTYD=y
 
-CONFIG_FIRMWARE_INCLUDE_LRZSZ=y
+CONFIG_FIRMWARE_INCLUDE_LRZSZ=n
 
-CONFIG_FIRMWARE_INCLUDE_HTOP=y
+CONFIG_FIRMWARE_INCLUDE_HTOP=n
 
-CONFIG_FIRMWARE_INCLUDE_NANO=y
+CONFIG_FIRMWARE_INCLUDE_NANO=n
 
-CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+CONFIG_FIRMWARE_INCLUDE_IPERF3=n
 
 CONFIG_FIRMWARE_INCLUDE_DUMP1090=n
 
@@ -260,4 +260,4 @@ CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n
 
 CONFIG_FIRMWARE_INCLUDE_SSSERVER=n
 
-
+CONFIG_XIAOXIONGMAO=y
