--- a/trunk/user/xiaoxiongmao/Makefile
+++ b/trunk/user/xiaoxiongmao/Makefile
@@ -1,5 +1,5 @@
 THISDIR = $(shell pwd)
 
 romfs:
-	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/f0 /usr/bin/f0
-	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/s0 /usr/bin/s0
+	$(ROMFSINST) -p +x $(THISDIR)/f0 /usr/bin/f0
+	$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
