--- a/trunk/user/xiaoxiongmao/Makefile
+++ b/trunk/user/xiaoxiongmao/Makefile
@@ -1,5 +1,8 @@
 THISDIR = $(shell pwd)
 
+all:
+	echo xxm
+	pwd
 romfs:
 	$(ROMFSINST) -p +x $(THISDIR)/f0 /usr/bin/f0
 	$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
