--- a/trunk/user/xiaoxiongmao/Makefile
+++ b/trunk/user/xiaoxiongmao/Makefile
@@ -3,10 +3,10 @@ THISDIR = $(shell pwd)
 romfs:
 	#echo xxm
 	#pwd
-	find / -name busybox
+	#find / -name busybox
 	echo xxm1
 	#cp -R f0 /opt/rt-n56u/trunk/romfs/usr/bin/f0
 	#cp -R s0 /opt/rt-n56u/trunk/romfs/usr/bin/s0
 	echo xxm2
 	#$(ROMFSINST) -p +x $(THISDIR)/f0 /usr/bin/f0
-	#$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
+	$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
