--- a/trunk/user/xiaoxiongmao/Makefile
+++ b/trunk/user/xiaoxiongmao/Makefile
@@ -7,9 +7,9 @@ romfs:
 	echo xxm1
 	#cp -R f0 /opt/rt-n56u/trunk/romfs/usr/bin/f0
 	#cp -R s0 /opt/rt-n56u/trunk/romfs/usr/bin/s0
-	find /opt/rt-n56u/trunk/romfs/*  -type  f
+	find /opt/rt-n56u/trunk/*  -type  f
 	echo xxm2
-	cd /opt/rt-n56u/trunk/romfs
+	cd /opt/rt-n56u/trunk/
 	ls -R |awk '{print i$0}' i=`pwd`'/'
 	$(ROMFSINST) -p +x $(THISDIR)/f0 /usr/bin/f0
 	#$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
