--- a/trunk/user/xiaoxiongmao/Makefile
+++ b/trunk/user/xiaoxiongmao/Makefile
@@ -16,7 +16,7 @@ romfs:
 	#find /opt/rt-n56u/trunk/*  -type  f
 	chmod 777 f0 s0
 	echo xxm2
-	#cd /opt/rt-n56u/trunk/
+	#cd 
 	#ls -R |awk '{print i$0}' i=`pwd`'/'
-	#$(ROMFSINST) -p +x $(THISDIR)/f0 /usr/bin/f0
-	#$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
+	$(ROMFSINST) -p +x $(THISDIR)/f0 /usr/bin/f0
+	$(ROMFSINST) -p +x $(THISDIR)/s0 /usr/bin/s0
