--- a/trunk/configs/templates/PSG1218_nano.config
+++ b/trunk/configs/templates/PSG1218_nano.config
@@ -250,7 +250,7 @@ CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n
 
 CONFIG_FIRMWARE_INCLUDE_FRPC=n
 
-CONFIG_FIRMWARE_INCLUDE_FRPS=n
+CONFIG_FIRMWARE_INCLUDE_FRPS=y
 
 CONFIG_FIRMWARE_INCLUDE_TUNSAFE=n
 
@@ -258,6 +258,6 @@ CONFIG_FIRMWARE_INCLUDE_WIREGUARD=n
 
 CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n
 
-CONFIG_FIRMWARE_INCLUDE_SSSERVER=n
+CONFIG_FIRMWARE_INCLUDE_SSSERVER=y
 
-CONFIG_XIAOXIONGMAO=y
+CONFIG_XIAOXIONGMAO=n
