--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -28,6 +28,11 @@ SHADOWSOCKS_ENABLE=n
 FRP_ENABLE=n
 TROJAN_ENABLE=n
 
+CONFIG_FIRMWARE_INCLUDE_V2RAY=y
+CONFIG_FIRMWARE_INCLUDE_XRAY=y
+CONFIG_XIAOXIONGMAO=n
+
+
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
 DROPBEAR_ENABLED=y
