--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -30,7 +30,7 @@ TROJAN_ENABLE=n
 
 CONFIG_FIRMWARE_INCLUDE_V2RAY=n
 CONFIG_FIRMWARE_INCLUDE_XRAY=n
-CONFIG_XIAOXIONGMAO=n
+CONFIG_XIAOXIONGMAO=y
 
 
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
