--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -28,9 +28,9 @@ SHADOWSOCKS_ENABLE=n
 FRP_ENABLE=n
 TROJAN_ENABLE=n
 
-CONFIG_FIRMWARE_INCLUDE_V2RAY=n
-CONFIG_FIRMWARE_INCLUDE_XRAY=n
-CONFIG_XIAOXIONGMAO=y
+CONFIG_FIRMWARE_INCLUDE_V2RAY=y
+CONFIG_FIRMWARE_INCLUDE_XRAY=y
+CONFIG_XIAOXIONGMAO=n
 
 
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
