--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -24,7 +24,7 @@ OPENSSH_ENABLED=n
 DROPBEAR_ENABLED=n
 SAMBA_ENABLED=n
 SOFTETHERVPN_ENABLE=n
-SHADOWSOCKS_ENABLE=n
+SHADOWSOCKS_ENABLE=y
 FRP_ENABLE=n
 TROJAN_ENABLE=n
 
