--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -33,6 +33,8 @@ CONFIG_FIRMWARE_INCLUDE_XRAY=n
 CONFIG_XIAOXIONGMAO=n
 CONFIG_FIRMWARE_INCLUDE_SSSERVER=y
 
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
 DROPBEAR_ENABLED=y
